--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fortcake-sdk",
   "license": "MIT",
-  "version": "0.0.2-test",
+  "version": "1.0.0",
   "description": "🛠 An SDK for building applications on top of fortcake.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
